# Mafeteng-Youth-League-Super-Admin

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
api/: super_admin.py
app/: app_factory.py  models.py  super_admin_main.py
app/core/: config.py  security.py
app/db/: session.py
app/services/: email.py  league.py  registration.py  storage.py
app/static/css/: styles.css
app/static/images/: README.md
app/static/js/: dashboard.js
app/templates/: base.html  code_verification.html  forgot_password.html  home.html  login.html  password_reset.html  super_admin_home.html  super_admin_register.html  team_admin_register.html
app/templates/exports/: cards.html
app/templates/super_admin/: action_result.html  dashboard.html
app/templates/team_admin/: account.html  action_result.html  dashboard.html  welcome.html
app/web/: routes.py
