[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mafeteng-youth-league-super-admin"
version = "0.1.0"
description = "Super Admin deployment for Mafeteng Youth League"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
  "SQLAlchemy>=2.0,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "Jinja2>=3.1,<4.0",
  "python-multipart>=0.0.12,<1.0",
  "supabase>=2.0,<3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "api*"]
exclude = ["tests*", "__pycache__*"]
namespaces = false

[tool.vercel]
entrypoint = "api.super_admin:app"
